--- a/Student_Management_System/Student_Management_System.csproj
+++ b/Student_Management_System/Student_Management_System.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminData.cs" />
+    <Compile Include="FileHandeler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
